# qgroundcontrol_mcp

src/: CMakeLists.txt
src/FlyView/: FlyView.qml
src/LLM/: CMakeLists.txt  ChatWidget.qml  LLMClient.cc  LLMClient.h
src/Settings/: App.SettingsGroup.json  AppSettings.cc  AppSettings.h
src/UI/AppSettings/: CMakeLists.txt  CoPilotSettings.qml  GeneralSettings.qml  SettingsPagesModel.qml
